<resources>
    <string name="app_name" translatable="false">We-bike</string>
    <string name="network_error_message">Please check your connection and try again.</string>
    <string name="network_error_ok">OK</string>
    <string name="content_description" translatable="false">not support</string>
    <string name="facebook_app_id" translatable="false">154009765545231</string>
    <string name="facebook_app_id_scheme" translatable="false">fb154009765545231</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_confirm">Confirm</string>
    <string name="global_back" translatable="false">〈</string>
    <string name="global_next2" translatable="false">〉</string>
    <string name="global_next">Next</string>
    <string name="global_km">km</string>
    <string name="global_reply" translatable="false">Reply</string>
    <string name="float_message_add_one">Add at least 1 place to view it in map</string>
    <string name="float_message_coming_soon">Coming soon, please check back later.</string>
    <string name="global_edit">Edit</string>
    <string name="global_delete">Delete</string>
    <string name="global_center" translatable="false">&#160;·</string>
    <string name="map_search_hint">Search a place</string>
    <string name="map_hotkey_title">Let\'s Go</string>
    <string name="map_hotkey_checkin">Check in</string>
    <string name="map_hotkey_explore">Explore</string>
    <string name="map_hotkey_walk">Saved</string>
    <string name="map_hotkey_timeline">Timeline</string>
    <string name="map_ebike_directions">Directions</string>
    <string name="map_ebike_rent">Rent</string>
    <string name="map_ebike_available">10 available</string>
    <string name="map_buletooth_title">Permission Request</string>
    <string name="map_buletooth_message">An app wants to turn Bluetooth ON for this device.</string>
    <string name="map_ebike_select_title">Pick Your Bike</string>
    <string name="map_ebike_power">Battery life</string>
    <string name="map_ebike_distance">Distance</string>
    <string name="map_ebike_cost">Per&#160;1&#160;TWD</string>
    <string name="map_ebike_pay_title">Payment Method</string>
    <string name="map_ebike_pay_card">Credit Card</string>
    <string name="map_ebike_pay_android" translatable="false">Android Pay</string>
    <string name="map_ebike_pay_more">E-Wallet</string>
    <string name="map_ebike_card_number">Card Number</string>
    <string name="map_ebike_card_name">Name on Card</string>
    <string name="map_ebike_card_date">Exp Date</string>
    <string name="map_ebike_card_date_exp" translatable="false">mm/yyyy</string>
    <string name="map_ebike_card_code">Security Code</string>
    <string name="map_ebike_card_ccv" translatable="false">CCV</string>
    <string name="map_ebike_card_title">Information</string>
    <string name="map_ebike_card_message">Please Enter Credit Card Information Below</string>
    <string name="map_ebike_lock">Lock</string>
    <string name="map_ebike_unlock">Unlock</string>
    <string name="map_ebike_lock_message">Please note charges will be applied during lock time.</string>
    <string name="map_ebike_unlock_message">Would you like to unlock the bike?</string>
    <string name="map_ebike_return_message">Would you like to return the bike?</string>
    <string name="map_ebike_return">Return</string>
    <string name="map_ebike_finish">Congrats!\nYou\'ve finished your ride!</string>
    <string name="map_ebike_detail_title">Your Receipt</string>
    <string name="map_ebike_detail_message">Title:</string>
    <string name="map_ebike_detail_cost">Cost</string>
    <string name="map_ebike_detail_duration">Duration</string>
    <string name="map_ebike_detail_bike">Bike</string>
    <string name="map_ebike_detail_from">Rent from</string>
    <string name="map_ebike_detail_to">Return to</string>
    <string name="map_ebike_calculate_down">Duration:</string>
    <string name="map_ebike_calculate_up">Est Cost:</string>
    <string name="map_ebike_calculate_center">TWD</string>
    <string name="map_ebike_calculate_unit">TWD</string>
    <string name="map_ebike_retrun_count">10 spots available</string>
    <string name="map_ebike_finish_route">Map your route</string>
    <string name="map_ebike_finish_view">View receipt</string>
    <string name="map_slide_timeline">Timeline</string>
    <string name="map_slide_favorites">My Favorites</string>
    <string name="map_slide_activities">Activities</string>
    <string name="map_slide_add">Add a Place</string>
    <string name="map_slide_manage">Manage My Places</string>
    <string name="map_slide_settings">Settings</string>
    <string name="map_slide_purchase">View Purchase</string>
    <string name="map_slide_sign_out">Sign out</string>
    <string name="map_slide_sign_in">Sign in</string>
    <string name="map_slide_visitor">Visitor</string>
    <string name="map_slide_country">Taiwan</string>
    <string name="map_slide_music">Music Station</string>
    <string name="map_slide_wallet">Wallet</string>
    <string name="map_status_open">Open</string>
    <string name="map_status_close">Closed</string>
    <string name="map_search_caution">Please try entering more characters.</string>
    <string name="map_search_caution2">No results found.</string>
    <string name="map_show_list">Show list</string>
    <string name="map_mobile_play">Play</string>
    <string name="map_mobile_back">Back</string>
    <string name="sign_in_title">Welcome</string>
    <string name="sign_in_message">Log in or sign up for free</string>
    <string name="sign_in_later">Later</string>
    <string name="info_add">Add</string>
    <string name="info_upload">Upload</string>
    <string name="info_direction">Direction</string>
    <string name="info_save">Save</string>
    <string name="info_share">Share</string>
    <string name="info_review">Review</string>
    <string name="info_about">About</string>
    <string name="info_place">About this Place</string>
    <string name="info_rate">Rate</string>
    <string name="info_rate_message">Leave a rating to help others.</string>
    <string name="info_comments">Comments</string>
    <string name="info_shares">Shares</string>
    <string name="info_comment">Comment</string>
    <string name="info_comment_message">Write a comment&#8230;</string>
    <string name="info_post">Post</string>
    <string name="info_more">Load more</string>
    <string name="info_title_reply">Reply</string>
    <string name="info_title_comment">Comment</string>
    <string name="info_float_message_delete">Delete Post</string>
    <string name="info_float_message_post">Edit Post</string>
    <string name="info_float_message_tag">Edit Tags</string>
    <string name="create_title">Add a place</string>
    <string name="create_name">Name*</string>
    <string name="create_address">Address*</string>
    <string name="create_category">Category*</string>
    <string name="create_category_hint">Choose category</string>
    <string name="create_hours">Hours</string>
    <string name="create_hours_hint">Select days and hours</string>
    <string name="create_phone">Phone</string>
    <string name="create_phone_hint">Primary phone number</string>
    <string name="create_website">Website</string>
    <string name="create_website_hint">Official website</string>
    <string name="create_video">Video</string>
    <string name="create_video_hint">SwiTube video channel URL</string>
    <string name="create_description">Description</string>
    <string name="create_description_hint">Add description</string>
    <string name="create_add_photo">Add Photos</string>
    <string name="create_claim">Claim this place</string>
    <string name="create_choose_title">Choose a category</string>
    <string name="create_time_title">Edit Hours</string>
    <string name="create_time_hours">Hours</string>
    <string name="create_time_add">Add</string>
    <string name="create_time_save">Save</string>
    <string name="create_photo_title">Gallery</string>
    <string name="create_features_title">Features</string>
    <string name="create_action_message">Please fill in the required fields.</string>
    <string name="create_action_Data_null">Service interrupted. Please try again.</string>
    <string name="checkin_title">Select a Place</string>
    <string name="checkin_add">Add new place</string>
    <string name="checkin_tag_title">Choose Tags</string>
    <string name="checkin_search_title">Search</string>
    <string name="checkin_add_tag">Add Tags</string>
    <string name="checkin_message_title">Create Post</string>
    <string name="checkin_message_post">Post</string>
    <string name="checkin_message_public">Public</string>
    <string name="checkin_message_anonymous">Anonymous</string>
    <string name="edit_time_open">Open at</string>
    <string name="edit_time_close">Close at</string>
    <string name="edit_time_title">Select opening time</string>
    <string name="edit_time_24">24hr</string>
    <string name="player_add_video_title">URL</string>
    <string name="player_add_video_hint">Please enter YouTube URL</string>
    <string name="player_add_video_submit">Submit</string>
    <string name="player_add_video_cancel">Cancel</string>
    <string name="player_list_add_url">Add Videos</string>
    <string name="player_list_to_message">Go to Comment Page</string>
    <string name="player_report_title">Report This Video Here</string>
    <string name="player_list_coming_soon">Coming Soon&#8230;</string>
    <string name="player_add_video_success">URL has been submitted.</string>
    <string name="player_now_playing">Now Playing</string>
    <string name="player_recommendation">Recommendation</string>
    <string name="player_subscribed">Subscribed!</string>
    <string name="player_unsubscribed">Unsubscribed</string>
    <string name="player_report">Report</string>
    <string name="player_report_success">Thanks for reporting</string>
    <string name="weekly_mon">Mon</string>
    <string name="weekly_tue">Tue</string>
    <string name="weekly_wed">Wed</string>
    <string name="weekly_thu">Thu</string>
    <string name="weekly_fri">Fri</string>
    <string name="weekly_sat">Sat</string>
    <string name="weekly_sun">Sun</string>
    <string name="weekly_monday">Monday</string>
    <string name="weekly_tuesday">Tuesday</string>
    <string name="weekly_wednesday">Wednesday</string>
    <string name="weekly_thursday">Thursday</string>
    <string name="weekly_friday">Friday</string>
    <string name="weekly_saturday">Saturday</string>
    <string name="weekly_sunday">Sunday</string>
    <string name="weekly_24hour">Open 24 hours</string>
    <string name="music_permission_one">This app requires Drawing Over Other Apps permission to run.\nPlease toggle Permit Drawing Over Other Apps to ON.</string>
    <string name="music_permission_two">"This app may not run properly without permission.\nIf you experience problems opening the app, please reinstall the app."</string>
    <string name="music_permission_get">Authorize</string>
    <string name="music_permission_cancel">Do not remind me again</string>
    <string name="music_search_error">Please enter at least 4 characters.</string>
    <string name="music_search_yes">Yes</string>
    <string name="music_title_library">Library</string>
    <string name="music_title_browse">Browse</string>
    <string name="music_title_you">For You</string>
    <string name="music_title_more">More</string>
    <string name="music_title_search">Search</string>
    <string name="stroke_title_trip">My Trip</string>
    <string name="stroke_title_trip2">Trip</string>
    <string name="stroke_title_browse">Browse</string>
    <string name="stroke_title_you">For You</string>
    <string name="stroke_title_create">Create a new trip</string>
    <string name="stroke_collect_type_place">Place</string>
</resources>