<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VCreditCard">
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhiteForE0E0E0"/>
    <TextView
        android:id="@+id/textBackInCreditCard"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_back" />
    <TextView
        android:id="@+id/textAddInCreditCard"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:text="@string/global_confirm"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textTitleInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/map_ebike_card_title"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <View
        android:id="@+id/viewBarInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayFor5F5F5F"
        android:layout_below="@+id/textTitleInCreditCard" />
    <TextView
        android:id="@+id/textCardInfoInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/viewBarInCreditCard"
        android:gravity="center_vertical"
        android:text="@string/map_ebike_card_message"
        android:textSize="20sp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/textCardNumberInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textCardInfoInCreditCard"
        android:gravity="center_vertical"
        android:text="@string/map_ebike_card_number"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="32dp"/>
    <EditText
        android:id="@+id/editCardNumberInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textCardNumberInCreditCard"
        android:background="@color/colorWhiteForE8EBEF"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />
    <TextView
        android:id="@+id/textNameInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editCardNumberInCreditCard"
        android:gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:text="@string/map_ebike_card_name"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/editNameInCreditCard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textNameInCreditCard"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorWhiteForE8EBEF"/>
    <TextView
        android:id="@+id/textDateInCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editNameInCreditCard"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:gravity="center_vertical"
        android:text="@string/map_ebike_card_date"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/editDateInCreditCard"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textDateInCreditCard"
        android:layout_marginStart="32dp"
        android:background="@color/colorWhiteForE8EBEF"
        android:hint="@string/map_ebike_card_date_exp"/>
    <TextView
        android:id="@+id/textCodeInCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editNameInCreditCard"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/textDateInCreditCard"
        android:layout_marginStart="100dp"
        android:text="@string/map_ebike_card_code"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/editCodeInCreditCard"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textCodeInCreditCard"
        android:layout_alignStart="@+id/textCodeInCreditCard"
        android:background="@color/colorWhiteForE8EBEF"
        android:hint="@string/map_ebike_card_ccv"/>
</RelativeLayout>