<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteForFFFFFF"
    tools:context=".view.VPhotoList">
    <View
        android:id="@+id/viewBarInPhoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhiteForE0E0E0"/>
    <TextView
        android:id="@+id/textBackInPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_back"/>
    <TextView
        android:id="@+id/textTitleInPhoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/create_photo_title"/>
    <TextView
        android:id="@+id/textConfirmInPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/global_ok"/>
    <ImageView
        android:id="@+id/imageTakePhotoInPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description"
        android:src="@drawable/camera_off_v11"
        android:padding="12dp"/>
    <View
        android:id="@+id/viewBarTopInPhoto"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayFor5F5F5F"
        android:layout_below="@+id/textTitleInPhoto"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerInPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewBarTopInPhoto"/>
</RelativeLayout>