<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VMyCollection">
    <TextView
        android:id="@+id/textTitleInMyCollection"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/map_slide_favorites"
        android:textSize="20sp"
        android:paddingStart="58dp"
        android:paddingEnd="1dp"
        android:layout_toStartOf="@+id/imageEditInMyCollection"/>
    <TextView
        android:id="@+id/textBackInMyCollection"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textTitleInMyCollection"
        android:layout_marginStart="8dp"
        android:text="@string/global_back"
        android:gravity="center"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/imageEditInMyCollection"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/change_v1_1"
        android:padding="14dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textTitleInMyCollection"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textBackInMyCollection"
        android:background="@color/colorWhiteForD9D9D9"/>
    <TextView
        android:id="@+id/textTypeAInMyCollection"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textTitleInMyCollection"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_gray_full_7b7b7b"
        android:textSize="16sp"
        android:text="@string/stroke_collect_type_place"
        android:gravity="center"
        android:textColor="@color/colorWhiteForFFFFFF"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerInMyCollection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textTypeAInMyCollection"
        android:layout_marginTop="16dp"/>
</RelativeLayout>