<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/viewBarInSignIn"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/textTitleInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/sign_in_title"
        android:textSize="26sp"
        android:layout_marginTop="16dp"/>
    <ImageView
        android:id="@+id/imageMarkInSignIn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/content_description"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textTitleInSignIn"
        android:layout_marginTop="16dp"
        android:src="@drawable/person_unlogin"/>
    <TextView
        android:id="@+id/textMessageInSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageMarkInSignIn"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_message"
        android:gravity="center"
        android:textSize="20sp"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/imageFacebookInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:layout_below="@+id/imageGoogleInSignIn"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/imageGoogleInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:layout_below="@+id/textMessageInSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
    <TextView
        android:id="@+id/textLaterInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageFacebookInSignIn"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in_later"
        android:textSize="20sp"
        android:gravity="center"/>
</RelativeLayout>
