<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VFinishTour">
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhiteForE0E0E0"/>
    <TextView
        android:id="@+id/textBackInDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_back"/>
    <TextView
        android:id="@+id/textOkInDetail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_ok"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/textTitleInDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/textBackInDetail"
        android:layout_toStartOf="@+id/textOkInDetail"
        android:gravity="center"
        android:text="@string/map_ebike_detail_title"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <View
        android:id="@+id/viewBarInDetail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textTitleInDetail"
        android:background="@color/colorGrayFor5F5F5F"/>
    <EditText
        android:id="@+id/editContentInDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/viewBarInDetail"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/colorBlackFor000000"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@android:color/transparent"/>
    <FrameLayout
        android:id="@+id/mapInDetail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/editContentInDetail"/>
    <LinearLayout
        android:id="@+id/layoutAInDetail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutBInDetail">
        <TextView
            android:id="@+id/textLeftUpInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="2.7"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textCenterUpInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="04:10"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textRightUpInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="801"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutBInDetail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/mapInDetail"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/textLeftDownInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/map_ebike_detail_cost"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textCenterDownInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/map_ebike_detail_duration"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textRightDownInDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/map_ebike_detail_bike"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:id="@+id/viewBarAInDetail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layoutAInDetail"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhiteForE0E0E0"/>
    <TextView
        android:id="@+id/textCentTitleInDetail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/viewBarAInDetail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/map_ebike_detail_from"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textCentMessageInDetail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/textCentTitleInDetail"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:textSize="16sp"/>
    <View
        android:id="@+id/viewBarBInDetail"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhiteForE0E0E0"
        android:layout_below="@+id/textCentMessageInDetail"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/textReturnTitleInDetail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/viewBarBInDetail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/map_ebike_detail_to"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textReturnMessageInDetail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/textReturnTitleInDetail"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:textSize="16sp"/>
</RelativeLayout>