<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VEditFeatures">
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhiteForE0E0E0"/>
    <TextView
        android:id="@+id/textBackInEditFeatures"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_back"/>
    <TextView
        android:id="@+id/textNextInEditFeatures"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/global_confirm"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/textTitleInEditFeatures"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/textBackInEditFeatures"
        android:layout_toStartOf="@+id/textNextInEditFeatures"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/create_features_title"/>
    <View
        android:id="@+id/viewBarInEditFeatures"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textTitleInEditFeatures"
        android:background="@color/colorGrayFor5F5F5F"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerInEditFeatures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewBarInEditFeatures"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</RelativeLayout>